--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.1",
     "nodemon": "^3.0.1",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "socket.io": "^4.7.2"
   }
 }
